# v-voice-claude

./: .gitignore  README.md  index.html  package-lock.json  package.json
public/: audio-processor.js
scripts/: granite_server.py  requirements.txt
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keyboard.rs  lib.rs  settings.rs  transcribe.rs
src/components/: Waveform.tsx
src/hooks/: useAudioCapture.ts
src/pages/: SettingsPage.tsx
